# w_Dockerfile

Docker0.0.1/: Dockerfile
Docker0.0.1/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
Docker0.0.2/: .zshrc  Dockerfile  pyproject.toml  requirements.txt
Docker0.0.2/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
Docker0.0.3/: Dockerfile
Docker0.0.3/@jupyterlab/terminal-extension/: plugin.jupyterlab-settings
