[tool.poetry]
name = "wusuowei_ds"
version = "0.1.0"
description = ""
authors = ["Yiming Qu"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
